js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-do-while-not-extensible-args.js
DONOTEVALUATE
(
)
;
do
{
import
(
'
'
'
'
)
;
}
while
(
false
)
;
